Run loom tests